# HazelCopy

./: .gitignore  .gitmodules  CMakeLists.txt  VS2019.bat
Hazel/: CMakeLists.txt
Hazel/src/: Hazel.h  hzpch.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Timestep.h  Window.h
Hazel/src/Hazel/Debug/: Instrumentor.h
Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Hazel/src/Hazel/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Hazel/src/Hazel/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
Hazel/src/Hazel/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
Hazel/src/Hazel/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Hazel/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
Hazel/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Hazel/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl  TextureShader.glsl
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
scripts/: Ubuntu.sh
